// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Upload render function Add image 1`] = `
<CreateProfilePage
  addImage={[Function]}
>
  <div
    className="profile__edit-content"
  >
    <div
      className="profile__edit-titlezone"
    >
      <h1
        className="profile__edit-title"
      />
    </div>
    <div
      className="profile__edit-page-position"
    >
      <div
        className="profile__edit-top-position"
      >
        <div
          className="profile__edit-image-zone"
        >
          <div
            className="profile__edit-image-upload"
          >
            <ProfileUploadImage
              activateSaveButton={[Function]}
              baseImage="/img/general/user-placeholder-thumbnail.svg"
              onFile={[Function]}
              thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
            >
              <div
                className="profile-picture"
              >
                <div
                  className="image-upload"
                >
                  <div
                    className="image-upload-loader"
                  >
                    <UploadButton
                      baseImage="/img/general/user-placeholder-thumbnail.svg"
                      readFiles={[Function]}
                      thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
                    >
                      <label>
                        <HoverImage
                          mouseOver="/img/general/user-placeholder-thumbnail-hover.svg"
                          src="/img/general/user-placeholder-thumbnail.svg"
                        >
                          <img
                            alt=""
                            className="image-upload-image"
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            src="/img/general/user-placeholder-thumbnail.svg"
                          />
                        </HoverImage>
                        <input
                          accept="image/png, image/jpeg"
                          className="droppable-image-field--file-input"
                          onChange={[Function]}
                          type="file"
                        />
                        <div
                          className="profile-image-text"
                        >
                          <T
                            component="profile"
                            name="uploadProfilePicture"
                          >
                            Vælg billede
                          </T>
                        </div>
                      </label>
                    </UploadButton>
                  </div>
                  <div
                    className="profile__image-errors"
                  >
                    <Error />
                  </div>
                </div>
              </div>
            </ProfileUploadImage>
          </div>
        </div>
        <div
          className="profile__edit-textfield-zone"
        >
          <EditProfileForm
            activateSaveButton={[Function]}
            confirmDelete={[Function]}
            enableButton={true}
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="input-group mb2   has-feedback"
              >
                <div
                  className="profile__edit-username-zone"
                >
                  <div
                    className="profile__edit-inputNameTitle"
                  >
                    Brugernavn
                  </div>
                  <div
                    className="profile__edit-textfield"
                  >
                    <input
                      className="profile__mobileinputfield   has-feedback"
                      data-cy="user-form-name"
                      name="name"
                      onChange={[Function]}
                      placeholder="Skriv brugernavn"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="profile__edit-libraryinfo"
              >
                <p
                  className="mb6"
                >
                  <T
                    component="login"
                    name="signedInby"
                  >
                    Du er logget på via
                  </T>
                  <input
                    className="profile__edit-libraryname"
                    disabled={true}
                    name="name"
                    type="text"
                    value=""
                  />
                </p>
              </div>
              <div
                className="profile__edit-link"
              >
                <a
                  href="/om"
                >
                   
                  <T
                    component="profile"
                    name="seeRulesLink"
                  >
                    Se regler og vilkår for Læsekompasset
                  </T>
                </a>
              </div>
              <div
                className="profile__edit-link"
              >
                <a
                  href="#!"
                  onClick={[Function]}
                >
                  <T
                    component="profile"
                    name="deleteProfile"
                  >
                    Slet profil
                  </T>
                </a>
              </div>
              <div
                className="profile__edit-bottom-position"
              >
                <div
                  className="profile__edit-bottom-elements"
                >
                  <div
                    className="btn profile__edit-savebtn"
                  >
                    <button
                      data-cy="user-form-submit"
                      disabled={false}
                    >
                      <T
                        component="profile"
                        name="saveProfileChanges"
                      >
                        Gem Ændringer
                      </T>
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </EditProfileForm>
        </div>
      </div>
    </div>
  </div>
</CreateProfilePage>
`;

exports[`Image Upload render function renders an image upload form 1`] = `
<div
  className="profile__edit-content"
>
  <div
    className="profile__edit-titlezone"
  >
    <h1
      className="profile__edit-title"
    />
  </div>
  <div
    className="profile__edit-page-position"
  >
    <div
      className="profile__edit-top-position"
    >
      <div
        className="profile__edit-image-zone"
      >
        <div
          className="profile__edit-image-upload"
        >
          <div
            className="profile-picture"
          >
            <div
              className="image-upload"
            >
              <div
                className="image-upload-loader"
              >
                <label>
                  <img
                    alt=""
                    className="image-upload-image"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    src="/img/general/user-placeholder-thumbnail.svg"
                  />
                  <input
                    accept="image/png, image/jpeg"
                    className="droppable-image-field--file-input"
                    name={undefined}
                    onChange={[Function]}
                    type="file"
                  />
                  <div
                    className="profile-image-text"
                  >
                    Vælg billede
                  </div>
                </label>
              </div>
              <div
                className="profile__image-errors"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="profile__edit-textfield-zone"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="input-group mb2   has-feedback"
          >
            <div
              className="profile__edit-username-zone"
            >
              <div
                className="profile__edit-inputNameTitle"
              >
                Brugernavn
              </div>
              <div
                className="profile__edit-textfield"
              >
                <input
                  className="profile__mobileinputfield   has-feedback"
                  data-cy="user-form-name"
                  name="name"
                  onChange={[Function]}
                  placeholder="Skriv brugernavn"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="profile__edit-libraryinfo"
          >
            <p
              className="mb6"
            >
              Du er logget på via
              <input
                className="profile__edit-libraryname"
                disabled={true}
                name="name"
                type="text"
                value=""
              />
            </p>
          </div>
          <div
            className="profile__edit-link"
          >
            <a
              href="/om"
            >
               
              Se regler og vilkår for Læsekompasset
            </a>
          </div>
          <div
            className="profile__edit-link"
          >
            <a
              href="#!"
              onClick={[Function]}
            >
              Slet profil
            </a>
          </div>
          <div
            className="profile__edit-bottom-position"
          >
            <div
              className="profile__edit-bottom-elements"
            >
              <div
                className="btn profile__edit-savebtn"
              >
                <button
                  data-cy="user-form-submit"
                  disabled={true}
                >
                  Gem Ændringer
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
